tests/snapshots/dbc-cantools/padding_bit_order.snap
---
source: tests/snapshots.rs
---
version: VER
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - E1
messages:
  - id:
      Standard: 1
    name: MSG0
    size: 8
    transmitter: E1
    signals:
      - name: A
        multiplexer_indicator: Plain
        start_bit: 6
        size: 15
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 32767
        unit: ""
        receivers:
          - E1
      - name: B
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
        receivers:
          - E1
      - name: C
        multiplexer_indicator: Plain
        start_bit: 38
        size: 15
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 32767
        unit: ""
        receivers:
          - E1
      - name: D
        multiplexer_indicator: Plain
        start_bit: 39
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
        receivers:
          - E1
  - id:
      Standard: 2
    name: MSG1
    size: 8
    transmitter: E1
    signals:
      - name: E
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
        receivers:
          - E1
      - name: F
        multiplexer_indicator: Plain
        start_bit: 1
        size: 15
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 32767
        unit: ""
        receivers:
          - E1
      - name: G
        multiplexer_indicator: Plain
        start_bit: 32
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
        receivers:
          - E1
      - name: H
        multiplexer_indicator: Plain
        start_bit: 33
        size: 15
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 32767
        unit: ""
        receivers:
          - E1
  - id:
      Standard: 3
    name: MSG2
    size: 8
    transmitter: E1
    signals:
      - name: I
        multiplexer_indicator: Plain
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 15
        unit: ""
        receivers:
          - E1
      - name: J
        multiplexer_indicator: Plain
        start_bit: 4
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 15
        unit: ""
        receivers:
          - E1
      - name: K
        multiplexer_indicator: Plain
        start_bit: 8
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 15
        unit: ""
        receivers:
          - E1
  - id:
      Standard: 4
    name: MSG3
    size: 8
    transmitter: E1
    signals:
      - name: L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 64
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 18446744073709551615
        unit: ""
        receivers:
          - E1
  - id:
      Standard: 5
    name: MSG4
    size: 8
    transmitter: E1
    signals:
      - name: M
        multiplexer_indicator: Plain
        start_bit: 0
        size: 64
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 18446744073709551615
        unit: ""
        receivers:
          - E1
