tests/snapshots/dbc-cantools/signed.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Standard: 10
    name: Message378910
    size: 8
    transmitter: ~
    signals:
      - name: s3big
        multiplexer_indicator: Plain
        start_bit: 39
        size: 3
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s3
        multiplexer_indicator: Plain
        start_bit: 34
        size: 3
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s10big
        multiplexer_indicator: Plain
        start_bit: 40
        size: 10
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s8big
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s7big
        multiplexer_indicator: Plain
        start_bit: 62
        size: 7
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s9
        multiplexer_indicator: Plain
        start_bit: 17
        size: 9
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s8
        multiplexer_indicator: Plain
        start_bit: 26
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: s7
        multiplexer_indicator: Plain
        start_bit: 1
        size: 7
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 9
    name: Message63big_1
    size: 8
    transmitter: ~
    signals:
      - name: s63big
        multiplexer_indicator: Plain
        start_bit: 6
        size: 63
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 8
    name: Message63_1
    size: 8
    transmitter: ~
    signals:
      - name: s63
        multiplexer_indicator: Plain
        start_bit: 1
        size: 63
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 7
    name: Message63big
    size: 8
    transmitter: ~
    signals:
      - name: s63big
        multiplexer_indicator: Plain
        start_bit: 7
        size: 63
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 6
    name: Message63
    size: 8
    transmitter: ~
    signals:
      - name: s63
        multiplexer_indicator: Plain
        start_bit: 0
        size: 63
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 5
    name: Message32big
    size: 8
    transmitter: ~
    signals:
      - name: s32big
        multiplexer_indicator: Plain
        start_bit: 7
        size: 32
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 4
    name: Message33big
    size: 8
    transmitter: ~
    signals:
      - name: s33big
        multiplexer_indicator: Plain
        start_bit: 7
        size: 33
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 3
    name: Message64big
    size: 8
    transmitter: ~
    signals:
      - name: s64big
        multiplexer_indicator: Plain
        start_bit: 7
        size: 64
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 2
    name: Message64
    size: 8
    transmitter: ~
    signals:
      - name: s64
        multiplexer_indicator: Plain
        start_bit: 0
        size: 64
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Double: -9223372036854780000
        max:
          Double: 9223372036854780000
        unit: ""
  - id:
      Standard: 1
    name: Message33
    size: 8
    transmitter: ~
    signals:
      - name: s33
        multiplexer_indicator: Plain
        start_bit: 0
        size: 33
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Int: -4294967296
        max:
          Uint: 4294967295
        unit: ""
  - id:
      Standard: 0
    name: Message32
    size: 8
    transmitter: ~
    signals:
      - name: s32
        multiplexer_indicator: Plain
        start_bit: 0
        size: 32
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
attribute_definitions:
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: BusType
    value:
      String: ""
