tests/snapshots/dbc-cantools/socialledge-written-by-cantools-with-default-sort-signals.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - DBG
  - DRIVER
  - IO
  - MOTOR
  - SENSOR
messages:
  - id:
      Standard: 100
    name: DRIVER_HEARTBEAT
    size: 1
    transmitter: DRIVER
    signals:
      - name: DRIVER_HEARTBEAT_cmd
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - SENSOR
          - MOTOR
  - id:
      Standard: 500
    name: IO_DEBUG
    size: 4
    transmitter: IO
    signals:
      - name: IO_DEBUG_test_float
        multiplexer_indicator: Plain
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.5
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: IO_DEBUG_test_signed
        multiplexer_indicator: Plain
        start_bit: 16
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: IO_DEBUG_test_enum
        multiplexer_indicator: Plain
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: IO_DEBUG_test_unsigned
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
  - id:
      Standard: 101
    name: MOTOR_CMD
    size: 1
    transmitter: DRIVER
    signals:
      - name: MOTOR_CMD_drive
        multiplexer_indicator: Plain
        start_bit: 4
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 9
        unit: ""
        receivers:
          - MOTOR
      - name: MOTOR_CMD_steer
        multiplexer_indicator: Plain
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: -5
        min:
          Int: -5
        max:
          Uint: 5
        unit: ""
        receivers:
          - MOTOR
  - id:
      Standard: 400
    name: MOTOR_STATUS
    size: 3
    transmitter: MOTOR
    signals:
      - name: MOTOR_STATUS_speed_kph
        multiplexer_indicator: Plain
        start_bit: 8
        size: 16
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.001
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: kph
        receivers:
          - DRIVER
          - IO
      - name: MOTOR_STATUS_wheel_error
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
  - id:
      Standard: 200
    name: SENSOR_SONARS
    size: 8
    transmitter: SENSOR
    signals:
      - name: SENSOR_SONARS_no_filt_rear
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 52
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: SENSOR_SONARS_rear
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 52
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
      - name: SENSOR_SONARS_no_filt_right
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 40
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: SENSOR_SONARS_right
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 40
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
      - name: SENSOR_SONARS_no_filt_middle
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 28
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: SENSOR_SONARS_middle
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 28
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
      - name: SENSOR_SONARS_no_filt_left
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 16
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DBG
      - name: SENSOR_SONARS_left
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 16
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
      - name: SENSOR_SONARS_err_count
        multiplexer_indicator: Plain
        start_bit: 4
        size: 12
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
      - name: SENSOR_SONARS_mux
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - DRIVER
          - IO
comments:
  - Node:
      name: DRIVER
      comment: // The driver controller driving the car //
  - Node:
      name: MOTOR
      comment: The motor controller of the car
  - Node:
      name: SENSOR
      comment: The sensor controller of the car
  - Message:
      id:
        Standard: 100
      comment: Sync message used to synchronize the controllers
attribute_definitions:
  - Plain:
      - BusType
      - String
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 0
  - Signal:
      - FieldType
      - String
attribute_defaults:
  - name: BusType
    value:
      String: CAN
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: FieldType
    value:
      String: ""
attribute_values_message:
  - name: GenMsgCycleTime
    message_id:
      Standard: 100
    value:
      Uint: 1000
  - name: GenMsgCycleTime
    message_id:
      Standard: 500
    value:
      Uint: 100
  - name: GenMsgCycleTime
    message_id:
      Standard: 101
    value:
      Uint: 100
  - name: GenMsgCycleTime
    message_id:
      Standard: 400
    value:
      Uint: 100
  - name: GenMsgCycleTime
    message_id:
      Standard: 200
    value:
      Uint: 100
attribute_values_signal:
  - name: FieldType
    message_id:
      Standard: 100
    signal_name: DRIVER_HEARTBEAT_cmd
    value:
      String: DRIVER_HEARTBEAT_cmd
  - name: FieldType
    message_id:
      Standard: 500
    signal_name: IO_DEBUG_test_enum
    value:
      String: IO_DEBUG_test_enum
value_descriptions:
  - Signal:
      message_id:
        Standard: 100
      name: DRIVER_HEARTBEAT_cmd
      value_descriptions:
        - id: 2
          description: DRIVER_HEARTBEAT_cmd_REBOOT
        - id: 1
          description: DRIVER_HEARTBEAT_cmd_SYNC
        - id: 0
          description: DRIVER_HEARTBEAT_cmd_NOOP
  - Signal:
      message_id:
        Standard: 500
      name: IO_DEBUG_test_enum
      value_descriptions:
        - id: 2
          description: IO_DEBUG_test2_enum_two
        - id: 1
          description: IO_DEBUG_test2_enum_one
